--- a/WPFUserControlsClickButton/WPFUserControlsClickButton.csproj
+++ b/WPFUserControlsClickButton/WPFUserControlsClickButton.csproj
@@ -55,11 +55,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Games.xaml">
+    <Page Include="Views\UserControls\Games.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Home.xaml">
+    <Page Include="Views\UserControls\Home.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -71,30 +71,30 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Games.xaml.cs">
+    <Compile Include="Views\UserControls\Games.xaml.cs">
       <DependentUpon>Games.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Home.xaml.cs">
+    <Compile Include="Views\UserControls\Home.xaml.cs">
       <DependentUpon>Home.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Music.xaml">
+    <Page Include="Views\UserControls\Music.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="News.xaml">
+    <Page Include="Views\UserControls\News.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Music.xaml.cs">
+    <Compile Include="Views\UserControls\Music.xaml.cs">
       <DependentUpon>Music.xaml</DependentUpon>
     </Compile>
-    <Compile Include="News.xaml.cs">
+    <Compile Include="Views\UserControls\News.xaml.cs">
       <DependentUpon>News.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -122,5 +122,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
